--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
             <!-- Project 5 -->
             <div class="project-card">
                 <img src="images/project5-img1.jpg" alt="Project 5 Image">
-                <h3>Coming Soon</h3>
-                <p>Maybe about forecasting.</p>
+                <h3>Renewable Energy Forecasting Using AI-Driven Wind Power Prediction Models</h3>
+                <p>This project uses AI and machine learning to predict wind power generation based on real-time weather data, helping optimize energy grid efficiency and balance supply and demand.
+</p>
                 <a href="project5.html" class="project-link">Learn More</a>
             </div>
         </div>
