--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,6 +17,7 @@
         <!-- Navigation Bar -->
         <nav class="navigation">
             <a href="about.html" class="nav-button">About Me</a>
+            <a href="3dportfolio.html" class="nav-button">3D Portfolio</a> <!-- Added this line -->
         </nav>
 
         <!-- Projects Grid -->
@@ -58,8 +58,7 @@
             <div class="project-card">
                 <img src="images/project5-img1.jpg" alt="Project 5 Image">
                 <h3>Renewable Energy Forecasting Using AI-Driven Wind Power Prediction Models</h3>
-                <p>This project uses AI and machine learning to predict wind power generation based on real-time weather data, helping optimize energy grid efficiency and balance supply and demand.
-</p>
+                <p>This project uses AI and machine learning to predict wind power generation based on real-time weather data, helping optimize energy grid efficiency and balance supply and demand.</p>
                 <a href="project5.html" class="project-link">Learn More</a>
             </div>
         </div>
