--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Navigation Bar -->
         <nav class="navigation">
             <a href="about.html" class="nav-button">About Me</a>
-            <a href="3dportfolio.html" class="nav-button">3D Portfolio</a> <!-- Added this line -->
+            <a href="https://dahlinc.github.io/3D-Portfolio/" class="nav-button">3D Portfolio</a> <!-- Added this line -->
         </nav>
 
         <!-- Projects Grid -->
